# tup25-p4

./: .gitignore  README.md  alumnos.md  c1.txt  c3.txt  convertir.ipynb  convertir_md.md  pyproject.toml  requirements.txt
clases/: 3.1-acceso-referencia.js  4.1-modulos.js  4.2-funciones.js  4.3-funciones.js  5.1-funciones-lista.js  5.2-funcion-alto-orden.js  5.3-clase.js  5.4-ordenar.js  5.5-funciones-recursiva.js  6.1-clases.js  6.2.funciones-generadoras.js  6.3.1-arbol-recursivo.js  6.3.2-arbol-no-recursivo.js  6.4.Agenda.js  clase.5.1.js  clase.5.2.js  clase.5.3.js  clase.5.4.js  clase.5.5.js  clase.5.6.js  clase.5.7.js  clase4.md
src/: alumnos.csv  alumnos.md  alumnos.vcf  convertir.ipynb
tp/54911 - Jatib, Rodrigo Gabriel/: info.txt
tp/61028 - Ponce, Rodrigo Exequiel/: info.txt
tp/61032 - Moya, Mariano/: info.txt
tp/61033 - Quiroga, Jose Maria/: info.txt
tp/61035 - Ledesma, Paulo/: info.txt
tp/61035 - Ledesma, Paulo Marcelo/: info.txt
tp/61037 - Paz, Rodrigo Federico/: info.txt
tp/61046 - Ponce, Luz Micaela/: info.txt
tp/61059 - Palavecino, Fabricio Gaston/: info.txt
tp/61073 - Gonzalez Chavez, Rodrigo/: info.txt
tp/61084 - Ramirez, Leonardo/: info.txt
tp/61096 - Suárez Vece, Leandro Andrés/: info.txt
tp/61113 - Oriz Caballero, Juan José/: info.txt
tp/61113 - Oríz Caballero, Juan José/: info.txt
tp/61115 - Ledesma, Santiago Esteban/: info.txt
tp/61120 - Guerrero, Ana Sofia/: info.txt
tp/61120 - Guerrero, Ana Sofía/: info.txt
tp/61129 - Tello, Abril María Agosti/: info.txt
tp/61131 - Agostino Colombres, Juan Manuel/: info.txt
(+113 files in other folders)
