[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gestion-alumnos-p4"
version = "1.0.0"
description = "Herramientas para gestionar información de alumnos de Programación 4"
authors = [
    {name = "Tu Nombre", email = "tu.email@ejemplo.com"}
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/tu-usuario/tup-25-p4"
Repository = "https://github.com/tu-usuario/tup-25-p4.git"
